# cabfile

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yaml
doc/dev/: api-1.0.0.md  modernization-plan.md
docs/: api.md  index.md
src/cabfile/: __init__.py  api.py  cli.py  core.py  errors.py  models.py
tests/: cab_tools.py  conftest.py  test_cab_functional.py  test_cabfile_api.py  test_cabfile_cli.py  test_cabfile_zipfile_compat.py  test_import.py
