[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "cabfile"
version = "2.0.0pre1"
description = "Windows cabinet (.cab) file reader"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Kristján Valur Jónsson", email = "sweskman@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: Microsoft :: Windows",
  "Topic :: System :: Archiving",
]
keywords = ["cab", "cabinet", "archiving", "windows"]
dependencies = []

[project.urls]
Homepage = "https://github.com/kristjanvalur/cabfile"

[tool.hatch.build.targets.wheel]
packages = ["src/cabfile"]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
  "requires_makecab: tests that require makecab.exe to generate CAB fixtures",
]
